[project]
name = "advanced-ml"
version = "0.1.0"
description = "Advanced Machine Learning - DTU"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
    "scipy>=1.17.0",
    "torch>=2.10.0",
]

[tool.uv.workspace]
members = ["miniproject1", "miniproject2", "miniproject3"]
